# Slang

./: .gitignore  LICENSE  README.md  app.py  cli.py  example.py  main.py  pyproject.toml  requirements.txt  requirments.txt  route.py  setup.py  sole.py
engine/: __init__.py
lang/: googletrans.py  lesan.py
scripts/: execute.py  typeffect.py
slang/: __init__.py  __main__.py  api.py  autonomus.py  blackbox.py  cli.py  deepseek.py  llamachat.py
slang/config/: autonomus_config.py  blackbox_config.py  cust_config.py  deepseek_config.py  llama_config.py
slang/log/: logformat.py
slang/models/: model_type.py  models.py
static/: index.html
tests/: tests.py
