[tool.poetry]
name = "slang-cli"
version = "0.1.0"
description = "A CLI app for interacting with AI models"
authors = ["Abdisa Merga <abdisamk@gmail.com>"]
readme = "README.md"
packages = [{include = "slang"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.1"  # Keep the latest version
rich = "^13.9.4"
aiohttp = "^3.11.10"
Brotli = "1.1.0"
chardet = "5.2.0"
fake-useragent = "2.0.1"
msgspec = "0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
slang = "cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"